# gen/shuffler/server.gen.go
@@ -92,8 +92,8 @@ type PostConfigs201JSONResponse struct {
 	Config VPNConfig `json:"config"`
 
 	// FreeSlots Number of free VPN slots after creation
-	FreeSlots *int                `json:"free_slots,omitempty"`
-	Id        *openapi_types.UUID `json:"id,omitempty"`
+	FreeSlots int                `json:"free_slots"`
+	Id        openapi_types.UUID `json:"id"`
 
 	// Type VPN type
 	Type ConfigType `json:"type"`
